crates/parser/tests/parse/imports-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..561
  MODULE@0..560
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_IMPORT@10..21
      L_PAREN@10..11 "("
      KEYWORD@11..17 "import"
      WHITESPACE@17..18 " "
      ERROR@18..19 "("
      ERROR@19..20 ")"
      R_PAREN@20..21 ")"
    WHITESPACE@21..24 "\n  "
    MODULE_FIELD_IMPORT@24..35
      L_PAREN@24..25 "("
      KEYWORD@25..31 "import"
      WHITESPACE@31..32 " "
      MODULE_NAME@32..34
        STRING@32..34 "\"\""
      R_PAREN@34..35 ")"
    WHITESPACE@35..38 "\n  "
    MODULE_FIELD_IMPORT@38..52
      L_PAREN@38..39 "("
      KEYWORD@39..45 "import"
      WHITESPACE@45..46 " "
      MODULE_NAME@46..48
        STRING@46..48 "\"\""
      WHITESPACE@48..49 " "
      NAME@49..51
        STRING@49..51 "\"\""
      R_PAREN@51..52 ")"
    WHITESPACE@52..55 "\n  "
    MODULE_FIELD_IMPORT@55..69
      L_PAREN@55..56 "("
      KEYWORD@56..62 "import"
      WHITESPACE@62..63 " "
      MODULE_NAME@63..65
        STRING@63..65 "\"\""
      WHITESPACE@65..66 " "
      ERROR@66..67 "("
      ERROR@67..68 ")"
      R_PAREN@68..69 ")"
    WHITESPACE@69..72 "\n  "
    MODULE_FIELD_IMPORT@72..89
      L_PAREN@72..73 "("
      KEYWORD@73..79 "import"
      WHITESPACE@79..80 " "
      MODULE_NAME@80..82
        STRING@80..82 "\"\""
      WHITESPACE@82..83 " "
      NAME@83..85
        STRING@83..85 "\"\""
      WHITESPACE@85..86 " "
      ERROR@86..87 "("
      ERROR@87..88 ")"
      R_PAREN@88..89 ")"
    WHITESPACE@89..92 "\n  "
    MODULE_FIELD_IMPORT@92..114
      L_PAREN@92..93 "("
      KEYWORD@93..99 "import"
      WHITESPACE@99..100 " "
      MODULE_NAME@100..102
        STRING@100..102 "\"\""
      WHITESPACE@102..103 " "
      NAME@103..105
        STRING@103..105 "\"\""
      WHITESPACE@105..106 " "
      EXTERN_TYPE_FUNC@106..113
        L_PAREN@106..107 "("
        KEYWORD@107..111 "func"
        WHITESPACE@111..112 " "
        R_PAREN@112..113 ")"
      R_PAREN@113..114 ")"
    WHITESPACE@114..117 "\n  "
    MODULE_FIELD_IMPORT@117..140
      L_PAREN@117..118 "("
      KEYWORD@118..124 "import"
      WHITESPACE@124..125 " "
      MODULE_NAME@125..127
        STRING@125..127 "\"\""
      WHITESPACE@127..128 " "
      NAME@128..130
        STRING@128..130 "\"\""
      WHITESPACE@130..131 " "
      EXTERN_TYPE_TABLE@131..139
        L_PAREN@131..132 "("
        KEYWORD@132..137 "table"
        WHITESPACE@137..138 " "
        R_PAREN@138..139 ")"
      R_PAREN@139..140 ")"
    WHITESPACE@140..143 "\n  "
    MODULE_FIELD_IMPORT@143..167
      L_PAREN@143..144 "("
      KEYWORD@144..150 "import"
      WHITESPACE@150..151 " "
      MODULE_NAME@151..153
        STRING@151..153 "\"\""
      WHITESPACE@153..154 " "
      NAME@154..156
        STRING@154..156 "\"\""
      WHITESPACE@156..157 " "
      EXTERN_TYPE_MEMORY@157..166
        L_PAREN@157..158 "("
        KEYWORD@158..164 "memory"
        WHITESPACE@164..165 " "
        R_PAREN@165..166 ")"
      R_PAREN@166..167 ")"
    WHITESPACE@167..170 "\n  "
    MODULE_FIELD_IMPORT@170..194
      L_PAREN@170..171 "("
      KEYWORD@171..177 "import"
      WHITESPACE@177..178 " "
      MODULE_NAME@178..180
        STRING@178..180 "\"\""
      WHITESPACE@180..181 " "
      NAME@181..183
        STRING@181..183 "\"\""
      WHITESPACE@183..184 " "
      EXTERN_TYPE_GLOBAL@184..193
        L_PAREN@184..185 "("
        KEYWORD@185..191 "global"
        WHITESPACE@191..192 " "
        R_PAREN@192..193 ")"
      R_PAREN@193..194 ")"
    WHITESPACE@194..197 "\n  "
    MODULE_FIELD_FUNC@197..212
      L_PAREN@197..198 "("
      KEYWORD@198..202 "func"
      WHITESPACE@202..203 " "
      IMPORT@203..211
        L_PAREN@203..204 "("
        KEYWORD@204..210 "import"
        R_PAREN@210..211 ")"
      R_PAREN@211..212 ")"
    WHITESPACE@212..215 "\n  "
    MODULE_FIELD_FUNC@215..233
      L_PAREN@215..216 "("
      KEYWORD@216..220 "func"
      WHITESPACE@220..221 " "
      IMPORT@221..232
        L_PAREN@221..222 "("
        KEYWORD@222..228 "import"
        WHITESPACE@228..229 " "
        MODULE_NAME@229..231
          STRING@229..231 "\"\""
        R_PAREN@231..232 ")"
      R_PAREN@232..233 ")"
    WHITESPACE@233..236 "\n  "
    MODULE_FIELD_FUNC@236..282
      L_PAREN@236..237 "("
      KEYWORD@237..241 "func"
      WHITESPACE@241..242 " "
      IMPORT@242..261
        L_PAREN@242..243 "("
        KEYWORD@243..249 "import"
        WHITESPACE@249..250 " "
        MODULE_NAME@250..255
          STRING@250..255 "\"env\""
        WHITESPACE@255..256 " "
        NAME@256..260
          STRING@256..260 "\"f1\""
        R_PAREN@260..261 ")"
      WHITESPACE@261..262 " "
      PLAIN_INSTR@262..281
        L_PAREN@262..263 "("
        INSTR_NAME@263..269 "import"
        WHITESPACE@269..270 " "
        IMMEDIATE@270..275
          STRING@270..275 "\"env\""
        WHITESPACE@275..276 " "
        IMMEDIATE@276..280
          STRING@276..280 "\"f2\""
        R_PAREN@280..281 ")"
      R_PAREN@281..282 ")"
    WHITESPACE@282..285 "\n  "
    MODULE_FIELD_IMPORT@285..303
      L_PAREN@285..286 "("
      KEYWORD@286..292 "import"
      WHITESPACE@292..293 " "
      MODULE_NAME@293..295
        STRING@293..295 "\"\""
      WHITESPACE@295..296 " "
      EXTERN_TYPE_FUNC@296..302
        L_PAREN@296..297 "("
        KEYWORD@297..301 "func"
        R_PAREN@301..302 ")"
      R_PAREN@302..303 ")"
    WHITESPACE@303..306 "\n  "
    MODULE_FIELD_IMPORT@306..325
      L_PAREN@306..307 "("
      KEYWORD@307..313 "import"
      WHITESPACE@313..314 " "
      MODULE_NAME@314..316
        STRING@314..316 "\"\""
      WHITESPACE@316..317 " "
      IMPORT_ITEM@317..324
        L_PAREN@317..318 "("
        KEYWORD@318..322 "item"
        WHITESPACE@322..323 " "
        R_PAREN@323..324 ")"
      R_PAREN@324..325 ")"
    WHITESPACE@325..328 "\n  "
    MODULE_FIELD_IMPORT@328..349
      L_PAREN@328..329 "("
      KEYWORD@329..335 "import"
      WHITESPACE@335..336 " "
      MODULE_NAME@336..338
        STRING@336..338 "\"\""
      WHITESPACE@338..339 " "
      IMPORT_ITEM@339..348
        L_PAREN@339..340 "("
        KEYWORD@340..344 "item"
        WHITESPACE@344..345 " "
        NAME@345..347
          STRING@345..347 "\"\""
        R_PAREN@347..348 ")"
      R_PAREN@348..349 ")"
    WHITESPACE@349..352 "\n  "
    MODULE_FIELD_IMPORT@352..377
      L_PAREN@352..353 "("
      KEYWORD@353..359 "import"
      WHITESPACE@359..360 " "
      MODULE_NAME@360..362
        STRING@360..362 "\"\""
      WHITESPACE@362..363 " "
      IMPORT_ITEM@363..376
        L_PAREN@363..364 "("
        KEYWORD@364..368 "item"
        WHITESPACE@368..369 " "
        EXTERN_TYPE_FUNC@369..375
          L_PAREN@369..370 "("
          KEYWORD@370..374 "func"
          R_PAREN@374..375 ")"
        R_PAREN@375..376 ")"
      R_PAREN@376..377 ")"
    WHITESPACE@377..380 "\n  "
    MODULE_FIELD_IMPORT@380..438
      L_PAREN@380..381 "("
      KEYWORD@381..387 "import"
      WHITESPACE@387..388 " "
      MODULE_NAME@388..394
        STRING@388..394 "\"test\""
      WHITESPACE@394..395 " "
      IMPORT_ITEM@395..413
        L_PAREN@395..396 "("
        KEYWORD@396..400 "item"
        WHITESPACE@400..401 " "
        NAME@401..412
          STRING@401..412 "\"global->1\""
        R_PAREN@412..413 ")"
      WHITESPACE@413..414 " "
      EXTERN_TYPE_GLOBAL@414..437
        L_PAREN@414..415 "("
        KEYWORD@415..421 "global"
        WHITESPACE@421..422 " "
        ERROR@422..432 "$global->1"
        WHITESPACE@432..433 " "
        GLOBAL_TYPE@433..436
          NUM_TYPE@433..436
            TYPE_KEYWORD@433..436 "i32"
        R_PAREN@436..437 ")"
      R_PAREN@437..438 ")"
    WHITESPACE@438..441 "\n  "
    MODULE_FIELD_IMPORT@441..479
      L_PAREN@441..442 "("
      KEYWORD@442..448 "import"
      WHITESPACE@448..449 " "
      MODULE_NAME@449..451
        STRING@449..451 "\"\""
      WHITESPACE@451..452 " "
      IMPORT_ITEM@452..461
        L_PAREN@452..453 "("
        KEYWORD@453..457 "item"
        WHITESPACE@457..458 " "
        NAME@458..460
          STRING@458..460 "\"\""
        R_PAREN@460..461 ")"
      WHITESPACE@461..462 " "
      IMPORT_ITEM@462..478
        L_PAREN@462..463 "("
        KEYWORD@463..467 "item"
        WHITESPACE@467..468 " "
        NAME@468..470
          STRING@468..470 "\"\""
        WHITESPACE@470..471 " "
        ERROR@471..472 "("
        ERROR@472..476 "func"
        ERROR@476..477 ")"
        R_PAREN@477..478 ")"
      R_PAREN@478..479 ")"
    WHITESPACE@479..482 "\n  "
    MODULE_FIELD_IMPORT@482..520
      L_PAREN@482..483 "("
      KEYWORD@483..489 "import"
      WHITESPACE@489..490 " "
      MODULE_NAME@490..492
        STRING@490..492 "\"\""
      WHITESPACE@492..493 " "
      IMPORT_ITEM@493..509
        L_PAREN@493..494 "("
        KEYWORD@494..498 "item"
        WHITESPACE@498..499 " "
        NAME@499..501
          STRING@499..501 "\"\""
        WHITESPACE@501..502 " "
        EXTERN_TYPE_FUNC@502..508
          L_PAREN@502..503 "("
          KEYWORD@503..507 "func"
          R_PAREN@507..508 ")"
        R_PAREN@508..509 ")"
      WHITESPACE@509..510 " "
      IMPORT_ITEM@510..519
        L_PAREN@510..511 "("
        KEYWORD@511..515 "item"
        WHITESPACE@515..516 " "
        NAME@516..518
          STRING@516..518 "\"\""
        R_PAREN@518..519 ")"
      R_PAREN@519..520 ")"
    WHITESPACE@520..523 "\n  "
    MODULE_FIELD_IMPORT@523..558
      L_PAREN@523..524 "("
      KEYWORD@524..530 "import"
      WHITESPACE@530..531 " "
      MODULE_NAME@531..533
        STRING@531..533 "\"\""
      WHITESPACE@533..534 " "
      IMPORT_ITEM@534..550
        L_PAREN@534..535 "("
        KEYWORD@535..539 "item"
        WHITESPACE@539..540 " "
        NAME@540..542
          STRING@540..542 "\"\""
        WHITESPACE@542..543 " "
        EXTERN_TYPE_FUNC@543..549
          L_PAREN@543..544 "("
          KEYWORD@544..548 "func"
          R_PAREN@548..549 ")"
        R_PAREN@549..550 ")"
      WHITESPACE@550..551 " "
      ERROR@551..552 "("
      ERROR@552..556 "func"
      ERROR@556..557 ")"
      R_PAREN@557..558 ")"
    WHITESPACE@558..559 "\n"
    R_PAREN@559..560 ")"
  WHITESPACE@560..561 "\n"

error: expected import module name
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: expected import name
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: expected extern type
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: unexpected token
  ┌─ imports-malformed.wat:2:12
  │
2 │   (import ())
  │            ^

error: expected import name
  ┌─ imports-malformed.wat:3:13
  │
3 │   (import "")
  │             ^

error: expected extern type
  ┌─ imports-malformed.wat:3:13
  │
3 │   (import "")
  │             ^

error: expected extern type
  ┌─ imports-malformed.wat:4:16
  │
4 │   (import "" "")
  │                ^

error: expected import name
  ┌─ imports-malformed.wat:5:14
  │
5 │   (import "" ())
  │              ^

error: expected extern type
  ┌─ imports-malformed.wat:5:14
  │
5 │   (import "" ())
  │              ^

error: unexpected token
  ┌─ imports-malformed.wat:5:15
  │
5 │   (import "" ())
  │               ^

error: expected extern type
  ┌─ imports-malformed.wat:6:17
  │
6 │   (import "" "" ())
  │                 ^

error: unexpected token
  ┌─ imports-malformed.wat:6:18
  │
6 │   (import "" "" ())
  │                  ^

error: expected table type
  ┌─ imports-malformed.wat:8:24
  │
8 │   (import "" "" (table ))
  │                        ^

error: expected memory type
  ┌─ imports-malformed.wat:9:25
  │
9 │   (import "" "" (memory ))
  │                         ^

error: expected global type
   ┌─ imports-malformed.wat:10:25
   │
10 │   (import "" "" (global ))
   │                         ^

error: expected import module name
   ┌─ imports-malformed.wat:11:16
   │
11 │   (func (import))
   │                ^

error: expected import name
   ┌─ imports-malformed.wat:11:16
   │
11 │   (func (import))
   │                ^

error: expected import name
   ┌─ imports-malformed.wat:12:19
   │
12 │   (func (import ""))
   │                   ^

error: only one import is allowed
   ┌─ imports-malformed.wat:13:30
   │
13 │   (func (import "env" "f1") (import "env" "f2"))
   │                              ^^^^^^

error: expected import name
   ┌─ imports-malformed.wat:14:14
   │
14 │   (import "" (func))
   │              ^

error: expected import name
   ┌─ imports-malformed.wat:15:20
   │
15 │   (import "" (item ))
   │                    ^

error: expected extern type
   ┌─ imports-malformed.wat:15:21
   │
15 │   (import "" (item ))
   │                     ^

error: expected extern type
   ┌─ imports-malformed.wat:16:23
   │
16 │   (import "" (item ""))
   │                       ^

error: expected import name
   ┌─ imports-malformed.wat:17:20
   │
17 │   (import "" (item (func)))
   │                    ^

error: identifier is not allowed after import item
   ┌─ imports-malformed.wat:18:45
   │
18 │   (import "test" (item "global->1") (global $global->1 i32))
   │                                             ^^^^^^^^^^

error: unexpected token
   ┌─ imports-malformed.wat:19:34
   │
19 │   (import "" (item "") (item "" (func)))
   │                                  ^^^^

error: unexpected token
   ┌─ imports-malformed.wat:19:38
   │
19 │   (import "" (item "") (item "" (func)))
   │                                      ^

error: expected extern type
   ┌─ imports-malformed.wat:19:40
   │
19 │   (import "" (item "") (item "" (func)))
   │                                        ^

error: expected extern type
   ┌─ imports-malformed.wat:20:39
   │
20 │   (import "" (item "" (func)) (item ""))
   │                                       ^

error: unexpected token
   ┌─ imports-malformed.wat:21:32
   │
21 │   (import "" (item "" (func)) (func))
   │                                ^^^^

error: unexpected token
   ┌─ imports-malformed.wat:21:36
   │
21 │   (import "" (item "" (func)) (func))
   │                                    ^
